--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Medical Store Management System</title>
   </head>
-  <body class="nav-fixed">
+  <body className="nav-fixed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
