class name erors fixed 1

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>Medical Store Management System</title>
   </head>
-  <body className="nav-fixed">
+  <body class="nav-fixed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
